[be/fix] 빌드 테스트 int/double값 수정