@@ -58,6 +58,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -153,9 +154,9 @@ public class UsersServiceImpl implements UsersService {
                     .map(ts -> UserTechStack.builder()
                             .user(user)
                             .techStack(ts)
-                            .score(scoreMap.getOrDefault(ts.getTechStackId(), 0))
+                            .score(scoreMap.getOrDefault(ts.getTechStackId(), 0.0))
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
             userTechStackRepository.saveAll(newTechStacks);
         }
 
